--- a/css/style.css
+++ b/css/style.css
@@ -323,3 +323,14 @@ footer {
     padding:5px 5px;
     }
 }
+ /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+       #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
