--- a/css/style.css
+++ b/css/style.css
@@ -1,336 +1,350 @@
 #main-navbar{
-    background-color: antiquewhite;
-    font-size: 20px;
-    overflow: hidden;
+ background-color: antiquewhite;
+ font-size: 20px;
+ overflow: hidden;
 }
 
 #navbar-container{
-    float: left;
-    width:100%;
-    position: relative;
+ float: left;
+ width:100%;
+ position: relative;
 }
 
 #navbar-container ul{
-    list-style-type: none;
-    margin:0;
-    padding:0;
-    position:relative;
-    left:50%;
-    float: left;
+ list-style-type: none;
+ margin:0;
+ padding:0;
+ position:relative;
+ left:50%;
+ float: left;
 }
 
 #navbar-container ul li{
-    float:left;
-    position:relative;
-    right:50%;
-    display:block;
+ float:left;
+ position:relative;
+ right:50%;
+ display:block;
 }
 
 #navbar-container ul li a{
-    display:block;
-    padding:20px 50px;
-    color: rgb(18, 34, 177);
-    text-decoration: none;
+ display:block;
+ padding:20px 50px;
+ color: rgb(18, 34, 177);
+ text-decoration: none;
 }
 #navbar-container  li :hover{
-    background-color:rgb(170, 160, 68);
+ background-color:rgb(170, 160, 68);
 }
 
 #onpage{
-    text-decoration: underline overline;
+ text-decoration: underline overline;
 }
 
 #index-body {
-    background-color: lightblue;
-    
+ background-color: lightblue;  
 }
 
 #index-title{
-    text-align: center;
-    font-family: 'Sansita Swashed', cursive;
-    background-color: aliceblue;
-    padding:10px 25px;
-    
+ text-align: center;
+ font-family: 'Sansita Swashed', cursive;
+ background-color: aliceblue;
+ padding:10px 25px;  
 }
 
 .section-title{
-    font-family: 'Red Hat Mono', monospace;
-    color: rgb(0, 0, 0);
-    background-color:#3D9970;
-    text-align: center;
-    padding:10px 25px;
+ font-family: 'Red Hat Mono', monospace;
+ color: rgb(0, 0, 0);
+ background-color:#3D9970;
+ text-align: center;
+ padding:10px 25px;
 }
 
 ul{
-    list-style-type: "\21AA";
-    font-weight:bold;
-    color: rgb(107, 43, 6);
-    font-family: 'Sansita Swashed', cursive;
-    font-family: 'Stint Ultra Condensed', cursive;
-    font-family: 'Truculenta', sans-serif;
-    font-size: 18px;
-    line-height: 0.7cm;
+ list-style-type: "\21AA";
+ font-weight:bold;
+ color: rgb(107, 43, 6);
+ font-family: 'Sansita Swashed', cursive;
+ font-family: 'Stint Ultra Condensed', cursive;
+ font-family: 'Truculenta', sans-serif;
+ font-size: 18px;
+ line-height: 0.7cm;
 }
 
 .sub-title{
-    font-family: 'Smokum', cursive;
-    font-size: 25px;
-    text-indent: 0.3cm;
-    font-weight: bold;
+ font-family: 'Smokum', cursive;
+ font-size: 25px;
+ text-indent: 0.3cm;
+ font-weight: bold;
 }
 
 #s1{
-    font-family: 'Inconsolata', monospace;
-    font-size: large;
-    text-indent: 0.3cm;
-    font-weight: bold;
+ font-family: 'Inconsolata', monospace;
+ font-size: large;
+ text-indent: 0.3cm;
+ font-weight: bold;
 }
 
 #india-title{
-    font-family: 'Gloria Hallelujah', cursive;
-    text-align: center;
-    padding:10px 25px;
-    background-color: rgb(195, 217, 236);
+ font-family: 'Gloria Hallelujah', cursive;
+ text-align: center;
+ padding:10px 25px;
+ background-color: rgb(195, 217, 236);
 }
 .ind-title{
-    font-family: 'Merienda', cursive;
-    text-align: center;
-    color: azure;
-    background-color: rgb(0, 0, 0);
-    font-weight:bold;
-    padding:10px 25px;
-    font-size: 30px;
+ font-family: 'Merienda', cursive;
+ text-align: center;
+ color: azure;
+ background-color: rgb(0, 0, 0);
+ font-weight:bold;
+ padding:10px 25px;
+ font-size: 30px;
 }
 .para-sty{
-    font-family: 'Josefin Sans', sans-serif;
-    color: #ecbf7c;
-    padding: 50px;
-    font-size: 20px;
-    width: 300px;
-    margin: 20px;
-    border:15px #d3ab61;
-    font-size:22px;
+ font-family: 'Josefin Sans', sans-serif;
+ color: #ecbf7c;
+ padding: 50px;
+ font-size: 20px;
+ width: 300px;
+ margin: 20px;
+ border:15px #d3ab61;
+ font-size:22px;
 }
 
 img{
-    border-radius:8px ;
-    height: 500px;
-    vertical-align:bottom;
+ border-radius:8px ;
+ height: 500px;
+ vertical-align:bottom;
 }
 
 span{
-      display: inline-block;
+ display: inline-block;
 }
 
 #india-body{
-    background-color: rgb(0, 0, 0);
+ background-color: rgb(0, 0, 0);
 }
 
 body{
-    background-color: antiquewhite;
+ background-color: antiquewhite;
 }
 #nin-title{
-    font-family: 'Sansita Swashed', cursive;
-    text-align: center;
-    background-color: #d3ab61;
-    padding: 2%;
+ font-family: 'Sansita Swashed', cursive;
+ text-align: center;
+ background-color: #d3ab61;
+ padding: 2%;
 }
 .nin-sub{
-    font-family: 'Red Hat Mono', monospace;
-    text-align: center;
+ font-family: 'Red Hat Mono', monospace;
+ text-align: center;
 }
 
 #histroy{
-    background-color: #3D9970;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight:bold;
-    text-align: center;
+ background-color: #3D9970;
+ font-family: 'Josefin Sans', sans-serif;
+ font-weight:bold;
+ text-align: center;
 }
 
 #marketing{
-    background-color: lightgrey;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight:bold;
-    text-align: center;
+ background-color: lightgrey;
+ font-family: 'Josefin Sans', sans-serif;
+ font-weight:bold;
+ text-align: center;
 }
 
 #seal{
-    background-color: lightcoral;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight:bold;
-    text-align: center;
+ background-color: lightcoral;
+ font-family: 'Josefin Sans', sans-serif;
+ font-weight:bold;
+ text-align: center;
 }
+
 #summary{
-    background-color: aliceblue;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight:bold;
-    text-align: center;
+ background-color: aliceblue;
+ font-family: 'Josefin Sans', sans-serif;
+ font-weight:bold;
+ text-align: center;
 }
+
 iframe{
-    animation-play-state: running;
+ animation-play-state: running;
 }
 
 footer {
-    font-family: 'Sansita Swashed', cursive;
-    background-color: antiquewhite;
-    text-align: center;
-    padding: 10px;
-    font-size: 22px;
-    font-weight:bold;
+ font-family: 'Sansita Swashed', cursive;
+ background-color: antiquewhite;
+ text-align: center;
+ padding: 10px;
+ font-size: 22px;
+ font-weight:bold;
 }
+
 @media only screen and (max-width: 720px){
-    body{ background:green;}
-    #navbar-container ul li a{
-        display:block;
-        padding:10px 25px;
-        color: rgb(18, 34, 177);
-        text-decoration: none;
-    }
+ body{ 
+  background:green;
+ }
+ #navbar-container ul li a{
+  display:block;
+  padding:10px 25px;
+  color: rgb(18, 34, 177);
+  text-decoration: none;
+ }
 
-    #nin-title{
-        font-family: 'Sansita Swashed', cursive;
-        text-align: center;
-        background-color: #000000;
-        color:white;
-        font-size: medium;
-    }
+  #nin-title{
+  font-family: 'Sansita Swashed', cursive;
+  text-align: center;
+  background-color: #000000;
+  color:white;
+  font-size: medium;
+ }
 
-    .nin-sub{
-        font-family: 'Red Hat Mono', monospace;
-        text-align: center;
-        font-size: medium;
-    }
+  .nin-sub{
+  font-family: 'Red Hat Mono', monospace;
+  text-align: center;
+  font-size: medium;
+ }
 
-    #histroy{
-        background-color: white;
-        font-family: 'Josefin Sans', sans-serif;
-        font-weight:bold;
-        text-align: center;
-        font-size: small;
-    }
+ #histroy{
+  background-color: white;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:bold;
+  text-align: center;
+  font-size: small;
+ }
 
-    #marketing{
-        font-family: 'Josefin Sans', sans-serif;
-        font-weight:bold;
-        text-align: center;
-        font-size: small;
-        background-color: #000000;
-        color:white;
-    }
+ #marketing{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:bold;
+  text-align: center;
+  font-size: small;
+  background-color: #000000;
+  color:white;
+ }
 
-    #seal{
-        background-color: lightcoral;
-        font-family: 'Josefin Sans', sans-serif;
-        font-weight:bold;
-        text-align: center;
-        font-size: small;
-        background-color: white;
-        color:rgb(0, 0, 0);
-    }
+ #seal{
+  background-color: lightcoral;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:bold;
+  text-align: center;
+  font-size: small;
+  background-color: white;
+  color:rgb(0, 0, 0);
+ }
 
-    #summary{
-        font-family: 'Josefin Sans', sans-serif;
-        font-weight:bold;
-        text-align: center;
-        font-size: small;
-        background-color: #000000;
-        color:white;
-    }
+ #summary{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:bold;
+  text-align: center;
+  font-size: small;
+  background-color: #000000;
+  color:white;
+ }
 
-   .im-size{
-        width: 350px;
-        height: auto;
-    }
+ .im-size{
+  width: 350px;
+  height: auto;
+ }
 
-    footer{
-        font-family: 'Sansita Swashed', cursive;
-        background-color: antiquewhite;
-        text-align: center;
-        font-size: medium;
-        font-weight:bold;
-        display:block;
-        padding:10px 10px;
-    }
+ footer{
+  font-family: 'Sansita Swashed', cursive;
+  background-color: antiquewhite;
+  text-align: center;
+  font-size: medium;
+  font-weight:bold;
+  display:block;
+  padding:10px 10px;
+ }
 }
 
 @media only screen and (max-width: 500px){
-    body{ 
-      background:red;
-    }
-  #navbar-container ul li a{
-    display:block;
-    padding:5px 10px;
-    color: rgb(18, 34, 177);
-    text-decoration: none;
-    font-size: small;
-    }
-#nin-title{
-    font-family: 'Red Hat Mono', monospace;
-    text-align: center;
-    background-color: #000000;
-    color:aliceblue;
-    font-size: small;
-    }
-.nin-sub{
-    font-family: 'Red Hat Mono', monospace;
-    text-align: center;
-    font-size: small;
-    }
-#histroy{
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight:bold;
-    text-align: center;
-    font-size: x-small;
-    color:black;
-    background-color: lightslategray;
-    }
-#marketing{
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight:bold;
-    text-align: center;
-    font-size: x-small;
-    color:black;
-    background-color: lightseagreen;
-    }
-#seal{
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight:bold;
-    text-align: center;
-    font-size: x-small;
-    color:black;
-    background-color: lightpink;
-    }
-#summary{
-    background-color: aliceblue;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight:bold;
-    text-align: center;
-    font-size: x-small;
-    background-color: #000000;
-    color:aliceblue;
-    }
-.im-size{
-   width: 250px;
-   height: auto;
-    }
-footer {
-    font-family: 'Sansita Swashed', cursive;
-    background-color: antiquewhite;
-    text-align: center;
-    font-size: medium;
-    font-weight:bold;
-    display:block;
-    padding:5px 5px;
-    }
+ body{ 
+  background:red;
+ }
+
+ #navbar-container ul li a{
+  display:block;
+  padding:5px 10px;
+  color: rgb(18, 34, 177);
+  text-decoration: none;
+  font-size: small;
+ }
+
+ #nin-title{
+  font-family: 'Red Hat Mono', monospace;
+  text-align: center;
+  background-color: #000000;
+  color:aliceblue;
+  font-size: small;
+ }
+
+ .nin-sub{
+  font-family: 'Red Hat Mono', monospace;
+  text-align: center;
+  font-size: small;
+ }
+
+ #histroy{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:bold;
+  text-align: center;
+  font-size: x-small;
+  color:black;
+  background-color: lightslategray;
+ }
+
+ #marketing{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:bold;
+  text-align: center;
+  font-size: x-small;
+  color:black;
+  background-color: lightseagreen;
+ }
+
+ #seal{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:bold;
+  text-align: center;
+  font-size: x-small;
+  color:black;
+  background-color: lightpink;
+ }
+
+ #summary{
+  background-color: aliceblue;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:bold;
+  text-align: center;
+  font-size: x-small;
+  background-color: #000000;
+  color:aliceblue;
+ }
+
+ .im-size{
+  width: 250px;
+  height: auto;
 }
+
+ footer {
+  font-family: 'Sansita Swashed', cursive;
+  background-color: antiquewhite;
+  text-align: center;
+  font-size: medium;
+  font-weight:bold;
+  display:block;
+  padding:5px 5px;
+ }
+}
+
  /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-       #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
+ * element that contains the map. */
+#map {
+ height: 100%;
+}
+
+/* Optional: Makes the sample page fill the window. */
+html, body {
+ height: 100%;
+ margin: 0;
+ padding: 0;
+}
